@@ -11,6 +11,9 @@ version 4.000:
 	Changes:
 	- use Mail::Box 4 exception model: use Log::Report
 
+	Fixes:
+	- doesn't export anything
+
 	Improvements:
 	- introduce attribute boxnr
 
